tests/should-fail/syntax/max-byte-in-string.j
globals
    string r = "x z"
endglobals
